# rust-crud

./: Cargo.toml
src/: main.rs
src/static/: hello.html
