[package]
name = "rust-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
tokio = { version = "1", features = ["full"]}
tracing = "0.1.36"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.138", features = ["derive"] }  
serde_json = "1.0"
tower-http = { version = "0.3.3", features = ["fs", "trace"] }
